# This file is part of crest.
# SPDX-Identifier: LGPL-3.0-or-later
#
# crest is free software: you can redistribute it and/or modify it under
# the terms of the GNU Lesser General Public License as published by
# the Free Software Foundation, either version 3 of the License, or
# (at your option) any later version.
#
# crest is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU Lesser General Public License for more details.
#
# You should have received a copy of the GNU Lesser General Public License
# along with crest.  If not, see <https://www.gnu.org/licenses/>.

option(
  'lapack',
  type: 'combo',
  value: 'auto',
  yield: true,
  choices: ['mkl', 'mkl-rt', 'openblas', 'netlib', 'custom', 'auto'],
  description: 'Linear algebra backend for program.',
)
option(
  'custom_libraries',
  type: 'array',
  value: [],
  description: 'libraries to load for custom linear algebra backend',
)

# Optional but often useful for MKL users 
option(
  'mkl_link',
  type: 'combo',
  value: 'auto',
  yield: true,
  choices: ['auto', 'rt', 'static'],
  description: 'How to link MKL: auto=best effort, rt=use libmkl_rt, static=link MKL static archives (not the same as fully static executable).',
)

# -----------------------------
# Link mode
# -----------------------------
option(
  'link_mode',
  type: 'combo',
  value: 'default',
  yield: true,
  choices: ['default', 'prefer-static', 'fully-static'],
  description: 'Executable link mode: default=normal, prefer-static=prefer static libs when available, fully-static=pass -static (may fail on some systems).',
)

option(
  'openmp',
  type: 'boolean',
  value: true,
  yield: true,
  description: 'use OpenMP parallelisation',
)
option(
  'WITH_TBLITE',
  type: 'boolean',
  value: true,
  description: 'build with tblite integration',
)
option(
  'WITH_GFN0',
  type: 'boolean',
  value: true,
  description: 'build with GFN0-xTB integration',
)
option(
  'WITH_GFNFF',
  type: 'boolean',
  value: true,
  description: 'build with GFN-FF integration',
)
option(
  'WITH_TOMLF',
  type: 'boolean',
  value: true,
  description: 'build with toml-f integration',
)
option(
  'WITH_LIBPVOL',
  type: 'boolean',
  value: true,
  description: 'build with libpvol integration',
)

option(
  'WITH_LWONIOM',
  type: 'boolean',
  value: true,
  description: 'build with lwONIOM integration',
)

